2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-14  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* LibraryView.cpp:
	* InlineEditor.cpp:
	* ViewpointList.h:
	* ViewpointList.cpp:
	* OutlineSelection.cpp:
	* FileImportDialog.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* MagicImport.cpp:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* X3DBrowserEditor.h:
	* BrowserSelection.cpp:
	* X3DBrowserEditor.cpp:
	* InlineEditor.xml:
	* LibraryView.cpp:
	* InlineEditor.h:
	* InlineEditor.cpp:
	* X3DInlineEditorInterface.h:
	* X3DBrowserWindowInterface.h:
	* OutlineSelection.cpp:
	* X3DInlineEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* FileImportDialog.cpp:
	* OutlineCellRenderer.cpp: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* DialogFactory.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.xml:
	* InlineEditor.xml:
	* InlineEditor.h:
	* InlineEditor.cpp:
	* X3DInlineEditorInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DInlineEditorInterface.cpp:
	* X3DBrowserWindowInterface.cpp:
	* X3DViewpointEditor.cpp:
	* GeometryPropertiesEditor.h:
	* X3DGeoViewpointEditor.cpp: 

2014-08-13  Holger Seelig  <holger.seelig@yahoo.de>

	* SFColorButton.h:
	* SFColorRGBAButton.h:
	* ViewpointEditor.xml:
	* X3DFieldAdjustment2.h:
	* X3DFieldAdjustment3.h:
	* X3DFieldAdjustment4.h:
	* ViewpointEditor.cpp:
	* X3DGeoViewpointEditor.cpp: 

2014-08-12  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* ViewpointEditor.xml:
	* MFStringComboBoxText.h:
	* X3DViewpointEditorInterface.h:
	* X3DOutlineTreeView.cpp: